<resources>
    <string name="app_name">EBlood</string>
    <string name="registration_details">Registration Details</string>
    <string name="login">LogIn</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="logout">LogOut</string>
    <string name="hospital">Hospital</string>
    <string name="blood_bank">Blood Bank</string>
    <string name="organisation_name">Org. Name</string>
    <string name="blood_details">Blood Details</string>
    <string name="blood_group">Blood Group</string>
    <string name="no_of_bottles">No. Of Bottles</string>
    <string name="a_positive">A Positive</string>
    <string name="a_negative">A Negative</string>
    <string name="b_positive">B Positive</string>
    <string name="b_negative">B Negative</string>
    <string name="ab_positive">AB Positive</string>
    <string name="ab_negative">AB Negative</string>
    <string name="o_positive">O Positive</string>
    <string name="o_negative">O Negative</string>
    <string name="submit">Submit</string>
    <string name="edit_my_entry">Edit My Entry</string>
    <string name="a">A+</string>
    <string name="an">A-</string>
    <string name="b">B+</string>
    <string name="bn">B-</string>
    <string name="ab">AB+</string>
    <string name="abn">AB-</string>
    <string name="o">O+</string>
    <string name="on">O-</string>
    <string name="hospital1">Hospital1</string>
    <string name="hospital2">Hospital2</string>
    <string name="bloodbank1">BloodBank1</string>
    <string name="bloodbank2">BloodBank2</string>
    <string name="_100">100</string>
    <string name="_150">150</string>
    <string name="_120">120</string>
    <string name="_50">50</string>
    <string name="_30">30</string>
    <string name="_20">20</string>
    <string name="_0">0</string>
    <string name="_2">2</string>
    <string name="_5">5</string>
    <string name="_3">3</string>
    <string name="_1">1</string>

</resources>