<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".DetailsActivity">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/lineraLayout1"
            android:layout_width="match_parent"
            android:layout_height="800dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="50dp"
                android:layout_marginTop="4dp"
                android:background="@color/white"
                android:layout_marginEnd="50dp"
                android:text="@string/blood_details"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="200dp"
                android:layout_height="53dp"
                android:layout_below="@+id/textView"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="4dp"
                android:layout_toStartOf="@+id/textView11"
                android:text="@string/blood_group"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="200dp"
                android:layout_height="53dp"
                android:layout_below="@+id/textView2"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="61dp"
                android:layout_toStartOf="@+id/editTextNumber"
                android:padding="10dp"
                android:text="@string/a_positive"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="200dp"
                android:layout_height="53dp"
                android:layout_below="@+id/textView3"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="61dp"
                android:layout_toStartOf="@+id/editTextNumber2"
                android:padding="10dp"
                android:text="@string/a_negative"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="200dp"
                android:layout_height="53dp"
                android:layout_below="@+id/textView4"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="61dp"
                android:layout_toStartOf="@+id/editTextNumber3"
                android:padding="10dp"
                android:text="@string/b_positive"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="200dp"
                android:layout_height="53dp"
                android:layout_below="@+id/textView5"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="61dp"
                android:layout_toStartOf="@+id/editTextNumber4"
                android:padding="10dp"
                android:text="@string/b_negative"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="200dp"
                android:layout_height="53dp"
                android:layout_below="@+id/textView6"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="61dp"
                android:layout_toStartOf="@+id/editTextNumber5"
                android:padding="10dp"
                android:text="@string/ab_positive"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="200dp"
                android:layout_height="53dp"
                android:layout_below="@+id/textView7"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="61dp"
                android:layout_toStartOf="@+id/editTextNumber6"
                android:padding="10dp"
                android:text="@string/ab_negative"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="200dp"
                android:layout_height="53dp"
                android:layout_below="@+id/textView8"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="61dp"
                android:layout_toStartOf="@+id/editTextNumber7"
                android:padding="10dp"
                android:text="@string/o_positive"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="200dp"
                android:layout_height="53dp"
                android:layout_below="@+id/textView9"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="61dp"
                android:layout_toStartOf="@+id/editTextNumber8"
                android:padding="10dp"
                android:text="@string/o_negative"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="200dp"
                android:layout_height="53dp"
                android:layout_below="@+id/textView"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="7dp"
                android:textStyle="bold"
                android:text="@string/no_of_bottles"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/editTextNumber"
                android:layout_width="100dp"
                android:layout_height="53dp"
                android:layout_below="@+id/textView11"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="50dp"
                android:ems="10"
                android:inputType="number"
                android:padding="10dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextNumber2"
                android:layout_width="100dp"
                android:layout_height="53dp"
                android:layout_below="@+id/editTextNumber"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="50dp"
                android:ems="10"
                android:inputType="number"
                android:padding="10dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextNumber3"
                android:layout_width="100dp"
                android:layout_height="53dp"
                android:layout_below="@+id/editTextNumber2"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="50dp"
                android:ems="10"
                android:inputType="number"
                android:padding="10dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextNumber4"
                android:layout_width="100dp"
                android:layout_height="53dp"
                android:layout_below="@+id/editTextNumber3"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="50dp"
                android:ems="10"
                android:inputType="number"
                android:padding="10dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextNumber5"
                android:layout_width="100dp"
                android:layout_height="53dp"
                android:layout_below="@+id/editTextNumber4"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="50dp"
                android:ems="10"
                android:inputType="number" />

            <EditText
                android:id="@+id/editTextNumber6"
                android:layout_width="100dp"
                android:layout_height="53dp"
                android:layout_below="@+id/editTextNumber5"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="50dp"
                android:ems="10"
                android:inputType="number"
                android:padding="10dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextNumber7"
                android:layout_width="100dp"
                android:layout_height="53dp"
                android:layout_below="@+id/editTextNumber6"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="50dp"
                android:ems="10"
                android:inputType="number"
                android:padding="10dp" />

            <EditText
                android:id="@+id/editTextNumber8"
                android:layout_width="100dp"
                android:layout_height="53dp"
                android:layout_below="@+id/editTextNumber7"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="50dp"
                android:ems="10"
                android:inputType="number"
                android:padding="10dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="53dp"
                android:layout_below="@+id/textView10"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="100dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="100dp"
                android:text="@string/submit"
                android:textAlignment="center"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>